pages are linked together and javascript functions are working well

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -51,7 +51,7 @@
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/advisorList">advisorList</a></li>
               <li><a ng-href="#/studentList">studentList</a></li>
-              <li><a ng-href="#/studentPage">studentPage</a></li>
+              <li><a ng-href="#/studentDetail">studentDetail</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
