--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -41,18 +41,16 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">sespa</a>
+            <a class="navbar-brand" href="#/">Student Explorer</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
+              <li><a href="#/">Home</a></li>
               <li><a ng-href="#/advisorList">advisorList</a></li>
               <li><a ng-href="#/studentList">studentList</a></li>
               <li><a ng-href="#/studentDetail">studentDetail</a></li>
-              <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -65,7 +63,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p>Copyright &copy; 2015 The Regents of the Univerisity of Michigan</p>
       </div>
     </div>
 
@@ -107,10 +105,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/advisor.js"></script>
         <script src="scripts/controllers/student.js"></script>
-        <script src="scripts/services/studentservice.js"></script>
+        <script src="scripts/services/student.js"></script>
         <!-- endbuild -->
 </body>
 </html>
