--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -100,8 +100,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/advisor.js"></script>
-        <script src="scripts/controllers/student.js"></script>
+        <!-- <script src="scripts/controllers/student.js"></script> -->
         <script src="scripts/services/student.js"></script>
+        <script src="scripts/services/studentexplorer.js"></script>
         <!-- endbuild -->
 </body>
 </html>
