Update student list controller and view
Fixes issue #5

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -101,6 +101,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/services/studentexplorer.js"></script>
         <script src="scripts/controllers/advisor_list.js"></script>
+        <script src="scripts/controllers/student_list.js"></script>
         <!-- endbuild -->
 </body>
 </html>
