--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -102,6 +102,7 @@
         <script src="scripts/services/studentexplorer.js"></script>
         <script src="scripts/controllers/advisor_list.js"></script>
         <script src="scripts/controllers/student_list.js"></script>
+        <script src="scripts/controllers/advisor_detail.js"></script>
         <!-- endbuild -->
 </body>
 </html>
