Use green status icon as placeholder app icon

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -5,6 +5,8 @@
     <title>Student Explorer</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="images/Status_Icons_Red.png" type="image/x-icon">
+    <link rel="icon" href="images/Status_Icons_Red.png" type="image/x-icon">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
