--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Student Explorer</a>
+          <a class="navbar-brand" href="#/">Student Explorer</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
