--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -40,8 +40,8 @@
             <li><a href="#/advisors">Advisors</a></li>
             <li><a href="#/students">Students</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
+          <form ng-submit="studentSearch()" class="navbar-form navbar-right">
+            <input ng-model="search" type="text" class="form-control" placeholder="Search Students...">
           </form>
             <ul class="nav navbar-nav navbar-right">
               <li ng-if="!config.username">
