Remove login requirement to display views

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -62,7 +62,7 @@
     </nav>
 
     <div class="container-fuild">
-        <div ng-if="config.username" ng-view=""></div>
+        <div ng-view></div>
     </div>
 
     <div class="footer">
