--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -106,6 +106,7 @@
         <script src="scripts/services/advising_data.js"></script>
         <script src="scripts/controllers/sespa_app.js"></script>
         <script src="scripts/controllers/student_detail.js"></script>
+        <script src="scripts/controllers/student_search.js"></script>
         <!-- endbuild -->
 </body>
 </html>
