--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" ng-app="sespaApp" ng-controller="SespaAppCtrl as sespaApp">
+<html class="no-js" ng-app="sespaApp" ng-controller="SespaAppCtrl as sespaApp" ng-cloak>
   <head>
     <meta charset="utf-8">
     <title>Student Explorer</title>
