--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -61,7 +61,7 @@
                       on {{userInfo.profile.policy_accepted_date}}
                     </p>
                   </li>
-                  <li ng-if="!userInfo.profile.is_policy_accepted" class="red-bg">
+                  <li ng-if="!userInfo.profile.is_policy_accepted" class="policy-warning">
                     <p>
                       You haven't accepted the 
                       <a href="https://wolverineaccess.umich.edu/eac/accesscomplianceresponse.jsp">University's Access &amp; Compliance policy</a>
