--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -125,6 +125,7 @@
         <script src="scripts/controllers/class_site_detail.js"></script>
         <script src="scripts/controllers/student_search.js"></script>
         <script src="scripts/directives/dig_data_fetch_progress.js"></script>
+        <script src="scripts/services/advising_utilities.js"></script>
         <!-- endbuild -->
 </body>
 </html>
