--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -12,6 +12,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-rangeslider/angular.rangeSlider.css" />
+    <link rel="stylesheet" href="bower_components/nvd3/nv.d3.css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -110,6 +111,10 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/nvd3/nv.d3.js"></script> 
+
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -126,6 +131,7 @@
         <script src="scripts/controllers/student_search.js"></script>
         <script src="scripts/directives/dig_data_fetch_progress.js"></script>
         <script src="scripts/services/advising_utilities.js"></script>
+      
         <!-- endbuild -->
 </body>
 </html>
