--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -77,7 +77,7 @@
       </div>
     </nav>
 
-    <div class="container-fuild content">
+    <div class="container content">
         <div ng-view></div>
     </div>
 
