Add alerts to the interface
Fixes issue #63

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -76,6 +76,15 @@
         </div>
       </div>
     </nav>
+    
+    <div class="alert-container">
+      <div ng-if="!userInfo.profile.is_policy_accepted" class="alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Warning!</strong> You haven't accepted the 
+          <a href="https://wolverineaccess.umich.edu/eac/accesscomplianceresponse.jsp">University's Access &amp; Compliance policy</a>
+          yet.
+      </div>
+    </div>
 
     <div class="container content">
         <div ng-view></div>
