--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -45,7 +45,7 @@
           </form>
             <ul class="nav navbar-nav navbar-right">
               <li ng-if="!userInfo.username">
-                <a ng-href="{{config.login}}?next=/" aria-haspopup="true" aria-expanded="false">Login</a>
+                <a ng-href="login/" aria-haspopup="true" aria-expanded="false">Login</a>
               </li>
               <li ng-if="userInfo.username" class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{userInfo.username}} <span class="caret"></span></a>
@@ -68,7 +68,7 @@
                     </p>
                   </li>
                   <li role="separator" class="divider"></li>
-                  <li><a ng-href="{{config.logout}}?next=/">Logout</a></li>
+                  <li><a ng-href="logout/">Logout</a></li>
                 </ul>
               </li>
             </ul>
