Fix toggle problem for menu
Fixes issue #38. Also fix the problem of the style which causes problem
when the width of window is between 600px and 768px.

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -38,7 +38,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#/advisors">Advisors</a></li>
+            <li><a href="#/advisors" data-toggle="collapse" data-target="#navbar">Advisors</a></li>
           </ul>
           <form ng-submit="studentSearch()" class="navbar-form navbar-right">
             <input ng-model="search" type="text" class="form-control" placeholder="Search Students...">
