Stylistic changes added

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#/">Student Explorer</a>
+          <a class="main-color-white main-navbar-brand navbar-brand" href="#/">Student Explorer</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -90,9 +90,9 @@
         <div ng-view></div>
     </div>
 
-    <div class="footer">
+    <div class="footer navbar-fixed-bottom">
       <div class="container">
-        <p>Copyright &copy; 2015 The Regents of the Univerisity of Michigan</p>
+        <p class="main-color-white">Copyright &copy; 2015 The Regents of the Univerisity of Michigan</p>
       </div>
     </div>
 
