--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -78,7 +78,7 @@
     </nav>
     
     <div class="alert-container">
-      <div ng-if="!userInfo.profile.is_policy_accepted" class="alert alert-warning alert-dismissible" role="alert">
+      <div ng-if="userInfo.profile.is_policy_accepted === false" class="alert alert-warning alert-dismissible" role="alert" ng-cloak>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <strong>Warning!</strong> You haven't accepted the 
           <a href="https://wolverineaccess.umich.edu/eac/accesscomplianceresponse.jsp">University's Access &amp; Compliance policy</a>
