Add version number to footer
Resolve SE-73

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -92,7 +92,7 @@
 
     <div class="footer navbar-fixed-bottom">
       <div class="container">
-        <p class="main-color-white">Copyright &copy; 2015 The Regents of the Univerisity of Michigan</p>
+        <p class="main-color-white">Student Explorer 2.0alpha2 &mdash; Copyright &copy; 2015 The Regents of the Univerisity of Michigan</p>
       </div>
     </div>
 
