--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -5,8 +5,9 @@
     <title>Student Explorer</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" href="images/Status_Icons_Red.png" type="image/x-icon">
-    <link rel="icon" href="images/Status_Icons_Red.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/icon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/icon-152.png">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
