Add tooltips to status icons
Add a directive to make it work.

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -141,6 +141,7 @@
         <script src="scripts/directives/dig_data_fetch_progress.js"></script>
         <script src="scripts/services/advising_utilities.js"></script>
         <script src="scripts/directives/bootstrap_tooltip.js"></script>
+        <script src="scripts/directives/bootstrap_status_tooltip.js"></script>
         <!-- endbuild -->
 </body>
 </html>
