--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -40,6 +40,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#/" data-toggle="collapse" data-target="#navbar">My Students</a></li>
+            <li><a href="#/advisors/" data-toggle="collapse" data-target="#navbar">Advisors</a></li>
           </ul>
           <form ng-submit="studentSearch()" class="navbar-form navbar-right">
             <input id="student-search" ng-model="search" type="text" class="form-control" placeholder="Search student name, uniqname, or UMID...">
