--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -86,6 +86,9 @@
           <a href="https://wolverineaccess.umich.edu/eac/accesscomplianceresponse.jsp">University's Access &amp; Compliance policy</a>
           yet.
       </div>
+      <div ng-if="dataDown" class="alert alert-danger alert-dismissible" role="alert" ng-cloak>
+          The database appears to be down. This may be for normal maintanence, please try reloading in a few minutes.
+      </div>
     </div>
 
     <div class="container content">
