Update version number

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -97,7 +97,7 @@
 
     <div class="footer navbar-fixed-bottom">
       <div class="container">
-        <p class="main-color-white">Student Explorer (2.0alpha2) <span class="footer-block">Copyright &copy; 2015</span> <span class="footer-block">The Regents of the Univerisity of Michigan</span></p>
+        <p class="main-color-white">Student Explorer (2.0.0) <span class="footer-block">Copyright &copy; 2015</span> <span class="footer-block">The Regents of the Univerisity of Michigan</span></p>
       </div>
     </div>
 
