--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="main-color-white main-navbar-brand navbar-brand" href="#/">Student Explorer</a>
+          <a class="main-color-white main-navbar-brand navbar-brand">Student Explorer</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
