Add visual performance indicator to assignments table

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -151,9 +151,9 @@
         <script src="scripts/services/advising_utilities.js"></script>
         <script src="scripts/directives/bootstrap_tooltip.js"></script>
         <script src="scripts/directives/bootstrap_status_tooltip.js"></script>
-        <script src="scripts/filters/filters.js"></script>
         <script src="scripts/controllers/class_site_list.js"></script>
         <script src="scripts/controllers/class_site_detail.js"></script>
+        <script src="scripts/filters/change_status.js"></script>
         <!-- endbuild -->
 </body>
 </html>
