Revise visual performance indicator to assignments table

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -153,7 +153,7 @@
         <script src="scripts/directives/bootstrap_status_tooltip.js"></script>
         <script src="scripts/controllers/class_site_list.js"></script>
         <script src="scripts/controllers/class_site_detail.js"></script>
-        <script src="scripts/filters/change_status.js"></script>
+        <script src="scripts/filters/filter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
