--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -153,6 +153,8 @@
         <script src="scripts/filters/filters.js"></script>
         <script src="scripts/controllers/class_site_list.js"></script>
         <script src="scripts/controllers/class_site_detail.js"></script>
+        <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
 </html>
