--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -152,7 +152,7 @@
         <script src="scripts/directives/bootstrap_status_tooltip.js"></script>
         <script src="scripts/controllers/class_site_list.js"></script>
         <script src="scripts/controllers/class_site_detail.js"></script>
-        <script src="scripts/filters/filter.js"></script>
+        <script src="scripts/filters/filters.js"></script>
         <!-- endbuild -->
 </body>
 </html>
