Highlight tabs only when urls match

--- a/sespa/app/index.html
+++ b/sespa/app/index.html
@@ -40,8 +40,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li id="default-tab" class="active"><a href="#/" data-toggle="collapse" data-target="#navbar.in">My Students</a></li>
-            <li><a href="#/advisors/" data-toggle="collapse" data-target="#navbar.in">Advisors</a></li>
+            <li ng-class="{active: isActive('/')}"><a href="#/" data-toggle="collapse" data-target="#navbar.in">My Students</a></li>
+            <li ng-class="{active: isActive('/advisors/')}"><a href="#/advisors/" data-toggle="collapse" data-target="#navbar.in">Advisors</a></li>
           </ul>
             <ul class="nav navbar-nav navbar-right">
               <li ng-if="!userInfo.username">
